8/10/11 adjust 2D dipoles to look more like Jmol dipoles
8/10/11 Jmol: swp atom labels so that they are numbered clockwise from upper left
8/10/11 Jmol: change atoms labels so that if there's only one atom of a type, it has no index (eg "C", not "C1")
8/9/11 Jmol: manually edit mol2 file for O3, swap y and z axes
8/9/11 Jmol: manually edit mol2 file for H2O, swap y and z axes, invert y axis
8/9/11 Jmol: manually edit mol2 file for CH2O, swap y and z axes, invert y axis, adjust labels
8/9/11 Jmol: manually edit mol2 orientation of atoms that involve swapping x and z axes, adjust labels
8/9/11 Jmol: manually edit atom names in mol2 files
8/9/11 Jmol: delete sdf and smol files, #3018
# 0.00.07 (54913) Aug 6, 2011
8/6/11 Jmol: execute scripts synchronously with JmolViewer.scriptWait, #3009
8/6/11 change Model control panel to Isosurface, with choices "none", "Electrostatic Potential", "Electron Density"
8/6/11 Jmol: add a proposed isosurface command for "electron density" view, for discussion
8/3/11 change request: add line separator between atom name and partial charge
8/3/11 change request: atom labels on by default
# 0.00.06 (54831) Aug 3, 2011
8/3/11 add molecule angle to Reset All
8/3/11 align two-atom molecule with E-field
8/2/11 change Bond.dipoleMagnitude to Bond.deltaElectronegativity, since this is really what it is
8/2/11 revert work done on making dipole a vector, introduced many problems and seems redundant
8/2/11 hide View controls that are not relevant to a tab
8/2/11 tweak sizes and locations of some things, so that there are no collisions when rotating molecule
8/2/11 for 2-atom molecule, molecular dipole is identical to bond dipole
8/2/11 make Bond dipole field a vector instead of a scalar
8/2/11 add infrastructure for aligning molecular dipole with E-field over time
8/2/11 Jmol: limit display of partial charge to 2 decimal places
8/2/11 Implemented TwoAtomMoleculeNode.RotationHandler